--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
     "prisma:migrate": "prisma migrate dev --name init",
     "db:seed": "node prisma/seed.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
