Actualización proyecto retoques

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL=postgresql://postgres:nAyzLtJNDhvGOxepBpuTynxlaHcPTdzA@postgres.railway.internal:5432/railway
+PORT=4000
