--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,9 @@
     "prisma:seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "@prisma/client": "^5.22.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
