--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "vite": "^5.4.8"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.17",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "vite": "^5.4.8"
+    "tailwindcss": "^4.1.17"
   }
 }
