--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,1 @@
-DATABASE_URL=postgresql://postgres:nAyzLtJNDhvGOxepBpuTynxlaHcPTdzA@postgres.railway.internal:5432/railway
-PORT=4000
+DATABASE_URL="postgresql://postgres:nAyzLtJNDhvGOxepBpuTynxlaHcPTdzA@postgres.railway.internal:5432/railway"
