--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "prisma": "^5.22.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^17.2.3",
+    "express": "^4.19.2",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
