Actualización proyecto retoques

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:nAyzLtJNDhvGOxepBpuTynxlaHcPTdzA@cabooose.proxy.rlwy.net:45786/railway
-PORT=4000
+DATABASE_URL="postgresql://tickets_db_hj02_user:L7dPyl0UYbKkTk48RHdYZpGdvujZbrka@dpg-d47j2dqli9vc738p2bv0-a/tickets_db_hj02?sslmode=require"
+PORT=10000
