--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate dev --name init",
-    "prisma:seed": "node prisma/seed.js"
-  },
+  "dev": "nodemon src/server.js",
+  "build": "echo 'no build step'",
+  "start": "node prisma/push-and-start.js"
+},
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
